# holging

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  PITCH.md  PITCH_EN.md  PROJECT_CONTEXT.md  README.md  SOLSHORT_MATH.md  netlify.toml  package-lock.json  package.json  solshort_math_architecture.md  tsconfig.json
.bg-shell/: manifest.json
app/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: ARCHITECTURE.md  BUSINESS.md  BUSINESS_ANALYSIS.md  COLOSSEUM.md  COLOSSEUM_ANALYSIS.md  FEE_CHANGE_GUIDE.md  LP.md  MAINNET.md  MAINNET_CHECKLIST.md  MATH.md  MINT_RULES.md  PAPER.md  PITCH.md  PROJECT_CONTEXT.md  SECURITY.md  SECURITY_AUDIT.md  SPEC.md  STRATEGY.md  TOKEN.md  VAULT_ANALYTICS.md
examples/: README.md  README.ru.md  agent-python.py  agent-typescript.ts
lean-proofs/: README.md  SolshortProofs.lean  lake-manifest.json  lakefile.toml
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
programs/solshort/: Cargo.toml
programs/solshort/src/: constants.rs  errors.rs  events.rs  fees.rs  lib.rs  oracle.rs  state.rs
programs/solshort/src/instructions/: accept_authority.rs  accrue_funding.rs  add_liquidity.rs  initialize.rs  initialize_lp.rs  migrate_pool.rs  mint.rs  mod.rs  pause.rs  redeem.rs  remove_liquidity.rs  transfer_authority.rs  update_fee.rs  update_k.rs  withdraw_fees.rs
scripts/: add-liquidity.ts  create-shortsol-metadata.ts  create-usdc-metadata.ts  initialize-faucet.ts  initialize-pool.ts  keeper.ts  migrate-devnet.ts  post-pyth-price.cjs  provision-agents.cjs  (+2 more)
(+118 files in other folders)
