[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Downgrade blake3 to avoid constant_time_eq 0.4.x (needs edition2024, incompatible with platform-tools v1.51)
[workspace.dependencies]
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
