[package]
name = "solshort"
version = "0.1.0"
description = "SolShort — Tokenized Hedge Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solshort"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
pyth-solana-receiver-sdk = "1.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
